2014-10-10  Jason Merrill  <jason@redhat.com>

	PR c++/63194
	* method.c (defaulted_late_check): Call maybe_instantiate_noexcept.

	* method.c (implicitly_declare_fn): Handle deleted lambda default
	ctor and copy assop here.
	* class.c (check_bases_and_members): Not here.
	(add_implicitly_declared_members): And don't set
	CLASSTYPE_LAZY_MOVE_ASSIGN.

	* semantics.c (finish_id_expression): Check for error_mark_node.

2014-10-09  Jason Merrill  <jason@redhat.com>

	PR c++/63207
	* semantics.c (outer_var_p): Non-static.
	(process_outer_var_ref): Split out from finish_id_expression.
	* pt.c (tsubst_copy_and_build): Call them.
	* cp-tree.h: Declare them.

2014-10-09  Paolo Carlini  <paolo.carlini@oracle.com>

	* semantics.c (check_constexpr_ctor_body_1): New.
	(check_constexpr_ctor_body): Use it; add bool parameter.
	(build_data_member_initialization): Handle BIND_EXPR and
	USING_STMT in the main conditional.
	(build_constexpr_constructor_member_initializers): Do not
	handle BIND_EXPR here.
	(constexpr_fn_retval): Handle BIND_EXPR in the switch.
	(massage_constexpr_body): Don't do it here.
	* parser.c (cp_parser_ctor_initializer_opt_and_function_body):
	Adjust check_constexpr_ctor_body call.
	(cp_parser_compound_statement): Do not pedwarn for compound-statement
	in constexpr function in C++14 mode.
	* cp-tree.h (check_constexpr_ctor_body): Update declaration.

2014-10-09  Jason Merrill  <jason@redhat.com>

	PR c++/63309
	* parser.c (cp_parser_class_head): push_template_decl for members
	of templates, too.

	PR c++/63415
	* pt.c (value_dependent_expression_p) [CONSTRUCTOR]: Check the type.
	(iterative_hash_template_arg): Likewise.

	PR c++/63437
	* cp-tree.h (REF_PARENTHESIZED_P): Also allow INDIRECT_REF.
	* semantics.c (force_paren_expr): And set it.
	* typeck.c (check_return_expr): And handle it.

2014-10-09  Marc Glisse  <marc.glisse@inria.fr>

	* decl.c (grokdeclarator): constexpr only implies const in C++11.

2014-10-08  Jason Merrill  <jason@redhat.com>
