@@ -1,10 +1,11 @@
 // { dg-do run }
 
 extern "C" void abort ();
+bool ok = false;
 
 struct B {
   B() {}
-  B(const B& b) { abort (); }
+  B(const B& b) { ok = true; }
 };
 
 struct D : public B {
@@ -21,4 +22,5 @@ D f() {
 
 int main () {
   b = (true ? f() : b);
+  return !ok;
 }
